@@ -271,14 +271,14 @@ public class LabKeyExpectedConditions
         }
 
         @Override @NotNull
-        public <V> V until(Function<? super T, V> isTrue)
+        public <V> V until(@NotNull Function<? super T, V> isTrue)
         {
             List<V> result;
             result = _wrapped.until(input -> {
                 V value = isTrue.apply(input);
                 return value == null ? null : Collections.singletonList(value);
             });
-            return result.get(0);
+            return result.getFirst();
         }
     }
 }
